k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: powrush-service
  namespace: powrush-mmo
  labels:
    app: powrush-mmo
spec:
  type: LoadBalancer
  ports:
  - port: 7777
    targetPort: 7777
    name: tcp
    protocol: TCP
  - port: 7778
    targetPort: 7778
    name: websocket
    protocol: TCP
  - port: 8080
    targetPort: 8080
    name: http
    protocol: TCP
  selector:
    app: powrush-mmo
